--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,51 @@
-/* this CSS is not part of the widget, it is here just as an example of the demo page styling.... Don't copy this one, roll your own. One
- * of the key things about the widget is that it allows you to do your own styling!
+/* This CSS is not part of the widget, it is here just as an example of the demo page styling....
+ * Don't copy this one, roll your own.
+ * One of the key things about the widget is that it allows you to do your own styling!
  */
 
 
+.btn-gray {
+	border-color: #ccc;
+	background-color: #f7f5f6; 
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#f7f5f6), to(#e8e8e8));
+	background-image: -webkit-linear-gradient(top, #f7f5f6, #e8e8e8);
+	background-image: -moz-linear-gradient(top, #f7f5f6, #e8e8e8);
+	background-image: -ms-linear-gradient(top, #f7f5f6, #e8e8e8);
+	background-image: -o-linear-gradient(top, #f7f5f6, #e8e8e8);
+	background-image: linear-gradient(to bottom, #f7f5f6, #e8e8e8);
+	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f7f5f6, endColorstr=#e8e8e8);
+	color: #000;
+}
+
+.btn-gray:hover {
+	border:1px solid #adadad;
+	background-color: #e8e8e8; 
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#e0e0e0), to(#cccccc));
+	background-image: -webkit-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: -moz-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: -ms-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: -o-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: linear-gradient(to bottom, #e0e0e0, #cccccc);
+	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e0e0e0, endColorstr=#cccccc);
+}
+
+.btn-info {
+	border:1px solid #adadad;
+	background-color: #e8e8e8; 
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#e0e0e0), to(#cccccc));
+	background-image: -webkit-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: -moz-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: -ms-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: -o-linear-gradient(top, #e0e0e0, #cccccc);
+	background-image: linear-gradient(to bottom, #e0e0e0, #cccccc);
+	filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#e0e0e0, endColorstr=#cccccc);
+}
+
 #editor {
-	max-height: 250px;
+	max-height: 500px;
 	height: 250px;
+	max-width: 1280px;
+	min-width: 640px;
 	background-color: white;
 	border-collapse: separate;
   	border: 1px solid rgb(204, 204, 204);
@@ -17,6 +57,7 @@
 	border-bottom-left-radius: 3px; border-top-left-radius: 3px;
 	overflow: scroll;
 	outline: none;
+	resize: both;
 }
 #editor:focus{
     border-color:rgba(82, 168, 236, 0.8);
@@ -25,6 +66,18 @@
     -webkit-box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
     -moz-box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
     box-shadow:inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(82,168,236,.6);
+}
+
+#editor table {
+	border-spacing: 2px;
+	border-collapse: separate;
+}
+#editor table td {
+	padding: 2px;
+}
+
+.lead {
+	font-size: medium;
 }
 
 #voiceBtn {
